# let-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-2.0.txt  README.md  idea  test.sh
.github/workflows/: rust.yml
asset-system/: Cargo.toml  README.md  build.rs
asset-system/src/: lib.rs
core/: Cargo.toml  README.md  build.rs
core/src/: camera.rs  lib.rs  scenes.rs  utils.rs
core/src/backend/: audio.rs  gpu.rs  graphics.rs  mod.rs  networking.rs
core/src/objects/: appearance.rs  color.rs  mod.rs  scenes.rs
core/src/objects/physics/: colliders.rs  joints.rs  mod.rs  rigid_bodies.rs
core/src/resources/: audio.rs  buffer.rs  data.rs  material.rs  mod.rs  model.rs  texture.rs
core/src/resources/shaders/: basic.vert  default.vert  default3d.frag  default3d.vert  instance.frag  instance.vert  texture_array.frag  texture_array_instance.frag  textured.frag  textured.vert  textured3d.frag  textured3d.vert
engine/: Cargo.toml  build.rs
engine-macros/: Cargo.toml
engine-macros/src/: .lib.rs.swp  lib.rs
engine/examples/: circle.rs  egui.rs  example-resource-config.toml  pong.rs
engine/src/: assets.rs  camera.rs  draw.rs  game.rs  lib.rs  prelude.rs  sound.rs  utils.rs
engine/src/error/: draw.rs  mod.rs  objects.rs  textures.rs
engine/src/game/: camera.rs  draw.rs  egui.rs  events.rs  font_layout.rs  input.rs  materials.rs  mod.rs  objects.rs  resources.rs  settings.rs  tick_system.rs  window.rs
engine/src/game/objects/: color.rs  data.rs  labels.rs  mod.rs  physics.rs  scenes.rs
engine/src/game/objects/physics/: colliders.rs  joints.rs  mod.rs  rigid_bodies.rs
engine/src/game/resources/: data.rs  labels.rs  loader.rs  macros.rs  materials.rs  mod.rs  model.rs  textures.rs
engine/src/game/resources/vulkan/: debug.rs  instance.rs  mod.rs  pipeline.rs  shaders.rs  window.rs
engine/src/game/resources/vulkan/shaders/: default_vert.spv  instance_frag.spv  texture_array_instance.frag
engine/src/game/vulkan/: instance.rs  mod.rs  pipeline.rs  shaders.rs  swapchain.rs  window.rs
engine/src/objects/: appearance.rs  labels.rs  mod.rs  scenes.rs
engine/src/objects/physics/: colliders.rs  mod.rs
engine/src/resources/: data.rs  loader.rs  macros.rs  materials.rs  mod.rs  model.rs  sounds.rs  textures.rs
engine/src/resources/vulkan/: instance.rs  mod.rs  pipeline.rs  shaders.rs  swapchain.rs  window.rs
engine/src/resources/vulkan/shaders/: default_frag.spv  default_texture_array_frag.spv  texture_array.frag  texture_array_instance_frag.spv  textured_frag.spv
examples/pong/: Cargo.toml
examples/pong/src/: main.rs
let-engine/: Cargo.toml  build.rs
let-engine-audio/: Cargo.toml  README.md
let-engine-audio/src/: lib.rs
let-engine-core/: Cargo.toml  README.md  build.rs
let-engine-core/src/: camera.rs  draw.rs  lib.rs  utils.rs  window.rs
let-engine-core/src/objects/: appearance.rs  color.rs  labels.rs  mod.rs  scenes.rs
let-engine-core/src/objects/physics/: colliders.rs  joints.rs  mod.rs  rigid_bodies.rs
let-engine-core/src/resources/: data.rs  loader.rs  materials.rs  mod.rs  model.rs  textures.rs
let-engine-core/src/resources/vulkan/: debug.rs  instance.rs  mod.rs  shaders.rs  swapchain.rs  window.rs
let-engine-core/src/resources/vulkan/shaders/: textured_instance_frag.spv
let-engine-core/src/shaders/: instance.frag
let-engine-widgets/: Cargo.toml  README.md
let-engine-widgets/src/: labels.rs  lib.rs
let-engine-widgets/src/shaders/: compile.sh  default.vert  text_frag.spv
let-engine/examples/: circle.rs  egui.rs  pong.rs  shapes.rs  texture.rs
let-engine/examples/asset-system/: example-resource-config.toml
let-engine/examples/client/: circle.rs  pong.rs  shapes.rs  texture.rs
let-engine/src/: draw.rs  egui_feature.rs  engine.rs  events.rs  input.rs  lib.rs  prelude.rs  settings.rs  sounds.rs  tick_system.rs  window.rs
let-engine/src/backend/: mod.rs
let-engine/src/backend/gpu/: buffer.rs  draw.rs  material.rs  mod.rs  model.rs  texture.rs
let-engine/src/backend/gpu/vulkan/: debug.rs  instance.rs  mod.rs  swapchain.rs
let-engine/src/backend/graphics/: buffer.rs  draw.rs  material.rs  mod.rs  model.rs  texture.rs
let-engine/src/backend/graphics/shaders/: basic.frag  default.frag  default.vert  textured.frag  textured_instance.frag
let-engine/src/backend/graphics/vulkan/: debug.rs  instance.rs  mod.rs  shaders.rs  swapchain.rs
let-engine/src/backend/networking/: client.rs  mod.rs  server.rs
let-engine/src/error/: objects.rs
let-engine/src/game/: egui.rs  events.rs  input.rs  mod.rs  networking.rs  settings.rs  tick_system.rs
let-engine/src/game/networking/: client.rs  mod.rs  server.rs
let-engine/src/objects/: color.rs  labels.rs
let-engine/src/objects/physics/: mod.rs  rigid_bodies.rs
let-engine/src/resources/vulkan/: mod.rs  swapchain.rs
let-engine/src/resources/vulkan/shaders/: instance_vert.spv  text.frag
macros/: Cargo.toml
macros/src/: derive_vertex.rs  lib.rs
src/: .game.rs.swp  discord.rs  error.rs  errors.rs  game.rs  lib.rs  texture.rs  window.rs
src/error/: objects.rs  textures.rs
src/game/: .objects.rs.swp  draw.rs  egui.rs  font_layout.rs  input.rs  materials.rs  objects.rs  resources.rs  shaders.rs  vulkan.rs
src/game/draw/: font_layout
src/game/objects/: data.rs
src/game/resources/: loader.rs
src/game/vulkan/: instance.rs  pipeline.rs  shaders.rs  swapchain.rs  window.rs
src/game/vulkan/shaders/: default.frag  default_textured.frag  obj.frag  obj.fs  obj.vert  obj.vs  text.fs  text.vs
src/old/: client.rs  consts.rs  data.rs  discord.rs  game.rs  main.rs  objects.rs  resources.rs  server.rs  sound.rs  vulkan.rs
src/old/game/: player.rs
src/old/shaders/: obj.vs  text.vs
src/old/vulkan/: font.rs  instance.rs  pipeline.rs  shaders.rs  window.rs
widgets/: Cargo.toml  README.md
widgets/src/: labels.rs  lib.rs
widgets/src/shaders/: text.frag  text.vert  text_frag.spv  text_vert.spv
