[workspace]
members = [
    "asset-system",
    "let-engine-core",
    "let-engine-audio",
    "let-engine-widgets",
    "let-engine",
]
resolver = "1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"

[workspace.dependencies]
parking_lot = "0.12"
ahash = "0.8"
anyhow = "1.0"
thiserror = "1.0"
bincode = "1.3"
derive_builder = "0.20"
crossbeam = "0.8"
glam = "0.28"
nalgebra = "0.33"
winit = "0.29"
rapier2d = "0.21"
image = "0.25"
serde = "1.0"
flate2 = "1.0"
bzip2 = "0.4"
zstd = "0.13"
xz2 = "0.1"
lz4 = "1.24"
smol = "2.0"
futures = "0.3"
  
  [workspace.dependencies.vulkano]
  version = "0.34"
  git = "https://github.com/vulkano-rs/vulkano.git"

  [workspace.dependencies.egui_winit_vulkano]
  version = "0.27"
  git = "https://github.com/Letronix624/egui_winit_vulkano.git"

