[workspace]
members = [
  "asset-system",
  "core",
  "widgets",
  "macros",
  "let-engine",
]
resolver = "2"

[workspace.package]
version = "0.11.0-alpha"
edition = "2021"
repository = "https://github.com/Letronix624/let-engine"
homepage = "https://www.let.software" 
keywords = ["gamedev", "graphics", "engine"]
license = "Apache-2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"

[workspace.dependencies]
parking_lot = "0.12"
foldhash = "0.1"
anyhow = "1.0"
thiserror = "2.0"
bincode = "1.3"
derive_builder = "0.20"
crossbeam = "0.8"
glam = "0.30"
nalgebra = "0.33"
winit = "0.30"
rapier2d = "0.22"
image = "0.25"
serde = "1.0"
flate2 = "1.0"
bzip2 = "0.4"
zstd = "0.13"
xz2 = "0.1"
lz4 = "1.28"
smol = "2.0"
futures = "0.3"
bytemuck = "1.21"

[workspace.dependencies.vulkano]
version = "0.35"
# git = "https://github.com/vulkano-rs/vulkano.git"

[workspace.dependencies.egui_winit_vulkano]
version = "0.28"
