[workspace]
members = [
  "asset-system",
  "core",
  "widgets",
  "macros",
  "let-engine",
]
resolver = "2"

[workspace.package]
version = "0.11.0"
edition = "2024"
repository = "https://github.com/Letronix624/let-engine"
homepage = "https://let.software" 
keywords = ["gamedev", "graphics", "engine"]
license = "Apache-2.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "unwind"

[profile.minimal]
inherits = "release"

opt-level = "z"
lto = true
debug = false
panic = "abort"
strip = "debuginfo"

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.vulkano]
opt-level = 3

[workspace.dependencies]
parking_lot = "0.12"
foldhash = "0.2"
anyhow = "1.0"
thiserror = "2.0"
derive_builder = "0.20"
crossbeam = "0.8"
glam = "0.30"
nalgebra = "0.34"
winit = "0.30"
rapier2d = "0.28"
image = "0.25"
serde = "1.0"
flate2 = "1.1"
bzip2 = "0.6"
zstd = "0.13"
xz2 = "0.1"
lz4 = "1.28"
smol = "2.0"
futures = "0.3"
bytemuck = "1.23"
rkyv = "0.8"
bincode = "2.0"

