[package]
name = "let-engine-asset-system"
authors = ["let"]
description = "asset management and packing system for let-engine"
readme = "./README.md"
keywords = ["gamedev", "assets", "compression"]

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8"
anyhow = { workspace = true }
thiserror = { workspace = true }
foldhash = { workspace = true }
bincode = { workspace = true, features = ["serde"] }
parking_lot = { workspace = true }

[dependencies.serde]
workspace = true
features = ["derive"]

[dependencies.flate2]
workspace = true
optional = true

[dependencies.bzip2]
workspace = true
optional = true

[dependencies.zstd]
workspace = true
optional = true

[dependencies.xz2]
workspace = true
optional = true

[dependencies.lz4]
workspace = true
optional = true


[build-dependencies]
toml = "0.8"
anyhow = { workspace = true }
foldhash = { workspace = true }
bincode = { workspace = true, features = ["serde"] }

[build-dependencies.serde]
workspace = true
features = ["derive"]

[build-dependencies.flate2]
workspace = true
optional = true

[build-dependencies.bzip2]
workspace = true
optional = true

[build-dependencies.zstd]
workspace = true
optional = true

[build-dependencies.xz2]
workspace = true
optional = true

[build-dependencies.lz4]
workspace = true
optional = true

[features]
deflate = ["dep:flate2"]
bzip2 = ["dep:bzip2"]
zstd = ["dep:zstd"]
lzma = ["dep:xz2"]
lz4 = ["dep:lz4"]
