[package]
name = "let-engine-core"
authors = ["let"]
description = "core functionality and types of the let-engine"
readme = "./README.md"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = { workspace = true }
anyhow = { workspace = true }
derive_builder = { workspace = true }
parking_lot = { workspace = true }
foldhash = { workspace = true }
rkyv = { workspace = true }
image = { workspace = true }
winit = { workspace = true, optional = true }
egui = { workspace = true, optional = true }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
half = { version = "2.6", features = ["bytemuck"] }
let-engine-macros = { path = "../macros" }
paste = "1.0"
kira = "0.10"
slotmap = "1.0"

[dependencies.glam]
workspace = true
features = ["bytemuck"]

[dependencies.nalgebra]
workspace = true
features = ["convert-glam030"]

[dependencies.rapier2d]
workspace = true
features = ["simd-stable", "parallel"]
optional = true

[build-dependencies]
shaderc = "0.9"

[features]
client = ["dep:winit"]
egui = ["client", "dep:egui"]

physics = ["dep:rapier2d"]

rand = ["glam/rand"]
fast-math = ["glam/fast-math"]
