[package]
name = "engine-macros"
version = "0.1.0"
authors = ["Let"]
edition = "2021"
description = "Macros to the Let engine"
repository = "https://github.com/Letronix624/Let-Engine"
keywords = [
    "gamedev",
    "graphics",
    "engine"
]
license = "Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = "2.0.16"
quote = "1.0.27"
