[package]
name = "let-engine"
version = "0.9.0"
authors = ["Let"]
edition = "2021"
description = "game engine"
readme = "../README.md"
repository = "https://github.com/Letronix624/let-engine"
keywords = [
    "gamedev",
    "graphics",
    "engine"
]
license = "Apache-2.0"

[dependencies]
# Client dependencies:
vulkano = { version = "0.34", optional = true }
winit = { version = "0.28", optional = true }
image = { version = "0.24", optional = true }
rusttype = { version = "0.9.3", features = [ "gpu_cache" ], optional = true }
egui_winit_vulkano = { version = "0.26", optional = true }

anyhow = "1.0"
thiserror = "1.0"

hashbrown = "0.14"
parking_lot = "0.12"
derive_builder = "0.12"
indexmap = "2.0"
atomic_float = "0.1"
crossbeam = "0.8"

glam = { version = "0.24.2", features = [ "bytemuck" ] }
nalgebra = { version = "0.32.3", features = [ "convert-glam024" ] }

rapier2d = { version = "0.17.2", features = [ "simd-stable" ]}
paste = "1.0.14"
spin_sleep = "1.1.1"
once_cell = "1.19.0"

[dev-dependencies]

egui_demo_lib = "0.23"

[features]
default = ["client"]
egui = ["dep:egui_winit_vulkano"]
vulkan_debug_utils = []
client = ["dep:vulkano", "dep:winit", "dep:image", "dep:rusttype"]

[package.metadata.docs.rs]

features = ["egui"]

default-target = "x86_64-unknown-linux-gnu"

