[package]
name = "let-engine"
version = "0.10.0"
authors = ["Let"]
edition = "2021"
description = "game engine"
readme = "../README.md"
repository = "https://github.com/Letronix624/let-engine"
keywords = [
    "gamedev",
    "graphics",
    "engine"
]
license = "Apache-2.0"

[dependencies]
# Client dependencies:
vulkano = { version = "0.34", optional = true }
winit = { version = "0.28", optional = true }
image = { version = "0.24", optional = true }
glyph_brush = { version = "0.7.8", optional = true }
egui_winit_vulkano = { version = "0.27", optional = true }
kira = { version = "0.8", optional = true}

anyhow = "1.0"
thiserror = "1.0"

parking_lot = "0.12"
derive_builder = "0.13"
indexmap = "2.2"
atomic_float = "0.1"
crossbeam = "0.8"

glam = { version = "0.24", features = [ "bytemuck", "mint" ] }
nalgebra = { version = "0.32", features = [ "convert-glam024" ] }

rapier2d = { version = "0.18", features = [ "simd-stable" ], optional = true }
paste = "1.0.14"
spin_sleep = "1.2"
once_cell = "1.19"

[dev-dependencies]

egui_demo_lib = "0.24"

[features]
default = [ "client", "labels", "physics", "audio" ]
egui = ["dep:egui_winit_vulkano"]
vulkan_debug_utils = []

client = [ "dep:vulkano", "dep:winit", "dep:image" ]
labels = [ "dep:glyph_brush" ]

audio = [ "dep:kira" ]

physics = [ "dep:rapier2d" ]

[package.metadata.docs.rs]

features = ["egui"]

default-target = "x86_64-unknown-linux-gnu"

