[package]
name = "let-engine"
version = "0.10.0"
authors = [ "Let" ]
edition = "2021"
description = "game engine"
readme = "../README.md"
repository = "https://github.com/Letronix624/let-engine"
keywords = [ "gamedev", "graphics", "engine" ]
license = "Apache-2.0"

[package.metadata.docs.rs]
features = [ "egui" ]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
ahash = "0.8"
anyhow = "1.0"
bincode = "1.3"
thiserror = "1.0"
parking_lot = "0.12"
derive_builder = "0.20"
indexmap = "2.2"
atomic_float = "0.1"
crossbeam = "0.8"
paste = "1.0.14"
spin_sleep = "1.2"
once_cell = "1.19"

  [dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [dependencies.vulkano]
  version = "0.34"
  git = "https://github.com/vulkano-rs/vulkano.git"
  optional = true

  [dependencies.winit]
  version = "0.29"
  optional = true

  [dependencies.image]
  version = "0.25"
  optional = true

  [dependencies.glyph_brush]
  version = "0.7.8"
  optional = true

  [dependencies.egui_winit_vulkano]
  version = "0.27"
  git = "https://github.com/Letronix624/egui_winit_vulkano.git"
  optional = true

  [dependencies.kira]
  version = "0.8"
  optional = true

  [dependencies.glam]
  version = "0.25"
  features = [ "bytemuck", "mint" ]

  [dependencies.nalgebra]
  version = "0.32.4"
  features = [ "convert-glam025" ]

  [dependencies.rapier2d]
  version = "0.18"
  features = [ "simd-stable" ]
  optional = true

  [dependencies.flate2]
  version = "1.0.28"
  optional = true

  [dependencies.bzip2]
  version = "0.4.4"
  optional = true

  [dependencies.zstd]
  version = "0.13.0"
  optional = true

  [dependencies.xz2]
  version = "0.1.7"
  optional = true

  [dependencies.lz4]
  version = "1.24.0"
  optional = true

[dev-dependencies]
egui_demo_lib = "0.26"

[build-dependencies]
toml = "0.8"
anyhow = "1.0"
ahash = "0.8"
bincode = "1.3"

  [build-dependencies.serde]
  version = "1.0"
  features = [ "derive" ]

  [build-dependencies.sled]
  version = "0.34"

  [build-dependencies.flate2]
  version = "1.0"
  optional = true

  [build-dependencies.bzip2]
  version = "0.4"
  optional = true

  [build-dependencies.zstd]
  version = "0.13"
  optional = true

  [build-dependencies.xz2]
  version = "0.1"
  optional = true

  [build-dependencies.lz4]
  version = "1.24"
  optional = true

[features]
default = [ "client", "labels", "physics", "audio" ]
egui = [ "dep:egui_winit_vulkano", "client" ]
vulkan_debug_utils = [ ]
client = [ "dep:vulkano", "dep:winit", "dep:image" ]
labels = [ "dep:glyph_brush", "client" ]
audio = [ "dep:kira", "client" ]
physics = [ "dep:rapier2d" ]
asset_system = [ ]
serde = [ "glam/serde" ]

rand = [ "glam/rand" ]
fast-math = [ "glam/fast-math" ]

# asset system compression algorithms
deflate = [ "dep:flate2" ]
bzip2 = [ "dep:bzip2" ]
zstd = [ "dep:zstd" ]
lzma = [ "dep:xz2" ]
lz4 = [ "dep:lz4" ]

