[package]
name = "let-engine-core"
version = "0.11.0"
authors = [ "let" ]
edition = "2021"
description = "core functionality and types of the let-engine"
readme = "./README.md"
repository = "https://github.com/Letronix624/let-engine"
keywords = [ "gamedev", "engine" ]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
