[package]
name = "let-engine-core"
version = "0.11.0-alpha"
authors = [ "let" ]
edition = "2021"
description = "core functionality and types of the let-engine"
readme = "./README.md"
repository = "https://github.com/Letronix624/let-engine"
keywords = [ "gamedev", "engine" ]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
derive_builder = { workspace = true }
parking_lot = { workspace = true }
crossbeam = { workspace = true }
serde = { workspace = true }
indexmap = "2.2"
paste = "1.0.14"
mint = "0.5.9"
log = "0.4.21"

  [dependencies.glam]
  workspace = true
  features = [ "bytemuck", "mint" ]

  [dependencies.nalgebra]
  workspace = true
  features = [ "convert-mint" ]

  [dependencies.vulkano]
  workspace = true
  optional = true

  [dependencies.egui_winit_vulkano]
  workspace = true
  optional = true

  [dependencies.winit]
  workspace = true
  optional = true

  [dependencies.image]
  workspace = true
  optional = true

  [dependencies.rapier2d]
  workspace = true
  features = [ "simd-stable" ]
  optional = true

[build-dependencies]
shaderc = "0.8"

[features]
egui = [ "dep:egui_winit_vulkano", "client" ]
vulkan_debug_utils = [ ]
client = [ "dep:vulkano", "dep:winit", "dep:image" ]
physics = [ "dep:rapier2d" ]
serde = [ "glam/serde", "rapier2d/serde-serialize" ]

rand = [ "glam/rand" ]
fast-math = [ "glam/fast-math" ]
