[package]
name = "let-engine-widgets"
version = "0.1.0"
authors = [ "let" ]
edition = "2021"
description = "default widgets for let-engine"
readme = "./README.md"
repository = "https://github.com/Letronix624/let-engine"
keywords = [ "gamedev", "graphics", "widgets" ]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
