[package]
name = "let-engine"
version = "0.11.0-alpha"
authors = [ "let" ]
edition = "2021"
description = "game engine"
readme = "../README.md"
repository = "https://github.com/Letronix624/let-engine"
keywords = [ "gamedev", "graphics", "engine" ]
license = "Apache-2.0"

[package.metadata.docs.rs]
features = [ "egui" ]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
parking_lot = { workspace = true }
ahash = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
crossbeam = { workspace = true }
async-std = { workspace = true }
atomic_float = "1.0"
spin_sleep = "1.2"
once_cell = { workspace = true }
local-ip-addr = "0.1.1"
serde = { workspace = true }

  [dependencies.vulkano]
  workspace = true
  optional = true

  [dependencies.winit]
  workspace = true
  optional = true

  [dependencies.image]
  workspace = true
  optional = true

  [dependencies.egui_winit_vulkano]
  workspace = true
  optional = true

  [dependencies.glam]
  workspace = true
  features = [ "bytemuck", "mint" ]

  [dependencies.nalgebra]
  workspace = true
  features = [ "convert-mint" ]

  [dependencies.rapier2d]
  workspace = true
  features = [ "simd-stable" ]
  optional = true

  [dependencies.asset-system]
  version = "0.1"
  path = "../asset-system"
  optional = true

  [dependencies.let-engine-core]
  version = "0.11.0-alpha"
  path = "../let-engine-core"

  [dependencies.let-engine-widgets]
  version = "0.1"
  path = "../let-engine-widgets"

  [dependencies.let-engine-audio]
  version = "0.1"
  path = "../let-engine-audio"
  optional = true

[dev-dependencies]
egui_demo_lib = "0.27"

[features]
default = [ "client", "physics", "audio" ]
egui = [ "let-engine-core/egui", "dep:egui_winit_vulkano", "client" ]
vulkan_debug_utils = [ "let-engine-core/vulkan_debug_utils" ]
client = [ "dep:vulkano", "dep:winit", "dep:image", "let-engine-core/client" ]
audio = [ "dep:let-engine-audio", "client" ]
physics = [ "dep:rapier2d" ]
asset_system = [ "dep:asset-system" ]
serde = [ "glam/serde", "let-engine-core/serde", "let-engine-widgets/serde" ]
networking = []

rand = [ "glam/rand", "let-engine-core/rand", "let-engine-widgets/rand" ]
fast-math = [ "glam/fast-math", "let-engine-core/fast-math", "let-engine-widgets/fast-math" ]

# asset system compression algorithms
deflate = [ "asset-system/deflate" ]
bzip2 = [ "asset-system/bzip2" ]
zstd = [ "asset-system/zstd" ]
lzma = [ "asset-system/lzma" ]
lz4 = [ "asset-system/lz4" ]

