[package]
name = "let-engine"
authors = ["let"]
readme = "../README.md"
description = "game engine"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }


[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
foldhash = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
derive_builder = { workspace = true }
crossbeam = { workspace = true }
smol = { workspace = true }
futures = { workspace = true }
rkyv = { workspace = true }
atomic_float = "1.1"
spin_sleep = "1.3"
rand = "0.9"
log = "0.4"
ctrlc = "3.4"
concurrent-slotmap = "0.2.0-alpha.1"

[dependencies.bytemuck]
workspace = true
features = ["derive", "min_const_generics"]

[dependencies.local-ip-address]
version = "0.6"
optional = true

[dependencies.vulkano]
# version = "0.35"
git = "https://github.com/vulkano-rs/vulkano.git"
branch = "master"  
optional = true

[dependencies.egui]
workspace = true
optional = true

[dependencies.egui_winit_vulkano]
git = "https://github.com/LukeP0WERS/egui_winit_vulkano.git"
branch = "master"  
optional = true

[dependencies.vulkano-taskgraph]
git = "https://github.com/vulkano-rs/vulkano.git"
branch = "master"  
optional = true

[dependencies.winit]
workspace = true
optional = true

[dependencies.image]
workspace = true
optional = true

[dependencies.glam]
workspace = true
features = ["bytemuck"]

[dependencies.nalgebra]
workspace = true
features = ["convert-mint"]

[dependencies.rapier2d]
workspace = true
features = ["simd-stable"]
optional = true

[dependencies.let-engine-asset-system]
version = "0.11.0"
path = "../asset-system"
optional = true

[dependencies.let-engine-core]
version = "0.11.0"
path = "../core"

[dev-dependencies]
# egui_demo_lib = "0.31"
simple_logger = "5.0"
let-engine-widgets = { path = "../widgets" }
image = { workspace = true }

[[example]]
name = "circle"
path = "examples/client/circle.rs"
required-features = ["client"]

[[example]]
name = "shapes"
path = "examples/client/shapes.rs"
required-features = ["client"]

[[example]]
name = "texture"
path = "examples/client/texture.rs"
required-features = ["client"]

[[example]]
name = "pong"
path = "examples/client/pong.rs"
required-features = ["client", "physics"]

[features]
default = [
  "client",
  "physics",
  "default_graphics_backend",
  "default_networking_backend",
]

egui = ["dep:egui_winit_vulkano", "dep:egui", "client", "let-engine-core/egui"]
client = ["dep:winit", "dep:image", "let-engine-core/client"]
default_graphics_backend = ["dep:vulkano", "dep:vulkano-taskgraph", "client"]
default_networking_backend = ["dep:local-ip-address", "glam/rkyv", "glam/bytecheck"]
vulkan_debug = ["default_graphics_backend"]
physics = ["dep:rapier2d", "let-engine-core/physics"]
asset_system = ["dep:let-engine-asset-system"]

rand = ["glam/rand", "let-engine-core/rand"]
fast-math = ["glam/fast-math", "let-engine-core/fast-math"]

# asset system compression algorithms
deflate = ["let-engine-asset-system/deflate"]
bzip2 = ["let-engine-asset-system/bzip2"]
zstd = ["let-engine-asset-system/zstd"]
lzma = ["let-engine-asset-system/lzma"]
lz4 = ["let-engine-asset-system/lz4"]
