[package]
name = "let-engine-widgets"
authors = ["let"]
description = "default widgets for let-engine"
readme = "./README.md"

version = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { workspace = true }
anyhow = { workspace = true }
glyph_brush = "0.7"
parking_lot = { workspace = true }
foldhash = { workspace = true }
crossbeam = { workspace = true }

[dependencies.let-engine-core]
version = "0.11.0"
path = "../core"

[dependencies.glam]
workspace = true
features = ["bytemuck", "mint"]

[features]

rand = ["glam/rand"]
fast-math = ["glam/fast-math"]
